plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.1'
	id 'io.spring.dependency-management' version '1.1.0'

}

group = 'com.kozarenko.bot'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.telegram:telegrambots-spring-boot-starter:6.7.0'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.telegram:telegrambots:6.7.0'
	implementation 'org.telegram:telegrambots-abilities:6.7.0'
	runtimeOnly 'com.h2database:h2'

	testCompileOnly 'org.projectlombok:lombok:1.18.28'
	testAnnotationProcessor 'org.projectlombok:lombok:1.18.28'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
	useJUnitPlatform()
}
